k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tri-backend
    role: backend
  name: tri-backend
  namespace: tri
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tri-backend
      role: backend
  strategy: {}
  template:
    metadata:
      labels:
        app: tri-backend
        role: backend
    spec:
      containers:
      - image: trahulprabhu38/tri-backend:v1.0
        name: tri-backend
        ports: 
        - containerPort: 8080
        resources:
          requests:
            cpu: 64m
            memory: 100Mi
          limits:
            cpu: 128m
            memory: 200Mi
        startupProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          periodSeconds: 5



---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: tri-backend
  name: backend
  namespace: tri
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: tri-backend
  type: ClusterIP
status:
  loadBalancer: {}
